# BezierSurfaceQT

./: CMakeLists.txt  beziercanvas.cpp  beziercanvas.h  bezierinterpolation.cpp  bezierinterpolation.h  beziersurface.cpp  beziersurface.h  beziersurface.ui  helpers.cpp  helpers.h  main.cpp  mesh.cpp  mesh.h  mesh_coordinates_0.txt  mesh_coordinates_1.txt  phonglighting.cpp  phonglighting.h  triangle.h  vector3.cpp  vector3.h  vertex.h
